<resources>
    <string name="app_name">SoftwareNewsClient</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">News</string>
    <string name="title_section3">Notice</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_section4">Related</string>
    <string name="check_update">Check Update</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Title</string>
    <string name="search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="latest_news">Latest News</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title">Title</string>
    <string name="date_time">Time:</string>
    <string name="page_view">Page views:</string>
    <string name="editor">Editor:</string>
    <string name="article">Article</string>
    <string name="appwidget_title">Latest News</string>
    <string name="update_time">Update Time:</string>
</resources>
