<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_disconnecting"
        android:icon="@mipmap/disconnect"
        android:orderInCategory="2"
        android:title="@string/disconnecting"
        app:showAsAction="ifRoom" />
    <item

        android:id="@+id/action_refresh"
        android:icon="@mipmap/refresh"
        android:orderInCategory="3"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
