<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_widget"
    android:padding="@dimen/widget_margin">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_header">

        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/appwidget_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button_settings"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@mipmap/refresh" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appwidget_title"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/update_time"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/appwidget_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appwidget_title"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/button_refresh"
            android:layout_toStartOf="@+id/button_refresh"
            android:background="@mipmap/settings" />
    </RelativeLayout>

    <ListView
        android:id="@+id/newsListView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:choiceMode="singleChoice" />

    <TextView
        android:id="@+id/widget_empty_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/disconnecting"
        android:textColor="@color/black" />


</RelativeLayout>